--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -260,7 +260,7 @@
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}"
                href="{% url 'login' %}">
-              <i class="bi bi-box-arrow-in-right me-1"></i> Login
+              <i class="bi bi-box-arrow-in-right me-1"></i> Log In
             </a>
           </li>
           <li class="nav-item">
