--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -12,15 +12,15 @@
                     <span role="img" aria-label="money bag">💰</span>
                     OurFinanceTracker
                 </h1>
-                <p class="lead text-center">A sua solução completa para gestão financeira pessoal.</p>
+                <p class="lead text-center">Your complete solution for personal financial management.</p>
                 <hr class="my-4">
-                <p class="text-center">Registe-se para começar a controlar receitas, despesas e saldos de contas.</p>
+                <p class="text-center">Register to start tracking income, expenses and account balances.</p>
                 <div class="text-center">
                     <a class="btn btn-primary btn-lg me-2" href="{% url 'login' %}" role="button">
-                        <i class="bi bi-box-arrow-in-right"></i> Fazer Login
+                        <i class="bi bi-box-arrow-in-right"></i> Log In
                     </a>
                     <a class="btn btn-outline-primary btn-lg" href="{% url 'signup' %}" role="button">
-                        <i class="bi bi-person-plus"></i> Registar-se
+                        <i class="bi bi-person-plus"></i> Sign Up
                     </a>
                 </div>
             </div>
