--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Login</h1>
+  <h1>Log In</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign in</button>
+    <button type="submit">Sign In</button>
   </form>
-  <p>No account? <a href="{% url 'signup' %}">Sign up here</a></p>
+  <div class="text-center mt-3">
+                        <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
+                        <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+                    </div>
 {% endblock %}
