--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -50,7 +50,7 @@
                                 <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
                             </div>
                             
-                            <a href="{% url 'password_reset' %}" class="btn btn-primary">Request new password reset</a>
+                            <a href="{% url 'accounts:password_reset' %}" class="btn btn-primary">Request new password reset</a>
                         {% endif %}
                     </div>
                 </div>
