--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -25,7 +25,7 @@
                         {% endfor %}
                     {% endif %}
                     
-                    <form method="post">
+                    <form method="post" action="{% url 'accounts:login' %}">
                         {% csrf_token %}
                         <div class="mb-3">
                             <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
@@ -47,7 +47,7 @@
                     </form>
                     
                     <div class="text-center mt-3">
-                        <a href="{% url 'password_reset' %}">Forgot your password?</a>
+                        <a href="{% url 'accounts:password_reset' %}">Forgot your password?</a>
                     </div>
                     <div class="text-center mt-2">
                         <a href="{% url 'accounts:signup' %}">Don't have an account? Sign up</a>
