--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -34,7 +34,7 @@
                         </form>
                         
                         <div class="mt-3">
-                            <a href="{% url 'login' %}" class="btn btn-link">Back to login</a>
+                            <a href="{% url 'accounts:login' %}" class="btn btn-link">Back to login</a>
                         </div>
                     </div>
                 </div>
