--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -24,7 +24,7 @@
                         <p>Your password has been successfully changed. You can now use your new password to log in to your account.</p>
                         
                         <div class="mt-3">
-                            <a href="{% url 'login' %}" class="btn btn-primary">Log in</a>
+                            <a href="{% url 'accounts:login' %}" class="btn btn-primary">Log in</a>
                         </div>
                     </div>
                 </div>
