--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -26,7 +26,7 @@
                         <p>If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
                         
                         <div class="mt-3">
-                            <a href="{% url 'login' %}" class="btn btn-primary">Back to login</a>
+                            <a href="{% url 'accounts:login' %}" class="btn btn-primary">Back to login</a>
                         </div>
                     </div>
                 </div>
