--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -41,7 +41,7 @@
                     </form>
                     
                     <div class="text-center mt-3">
-                        <p>Already have an account? <a href="{% url 'login' %}">Log in here</a></p>
+                        <p>Already have an account? <a href="{% url 'accounts:login' %}">Log in here</a></p>
                     </div>
                 </div>
             </div>
