--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -16,10 +16,10 @@
                 <hr class="my-4">
                 <p class="text-center">Register to start tracking income, expenses and account balances.</p>
                 <div class="text-center">
-                    <a class="btn btn-primary btn-lg me-2" href="{% url 'login' %}" role="button">
+                    <a class="btn btn-primary btn-lg me-2" href="{% url 'accounts:login' %}" role="button">
                         <i class="bi bi-box-arrow-in-right"></i> Log In
                     </a>
-                    <a class="btn btn-outline-primary btn-lg" href="{% url 'signup' %}" role="button">
+                    <a class="btn btn-outline-primary btn-lg" href="{% url 'accounts:signup' %}" role="button">
                         <i class="bi bi-person-plus"></i> Sign Up
                     </a>
                 </div>
