--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,21 +1,25 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Password Reset</title>
-</head>
-<body>
+<!doctype html>
+<html lang="en">
+  <body style="font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.5;color:#111;">
     <p>Hello {{ user.first_name|default:user.username }},</p>
-    
     <p>You (or someone else) requested a password reset for your OurFinanceTracker account.</p>
-    <p>Please click the link below to set a new password:</p>
-    
-    <p><a href="{{ protocol }}://{{ domain }}{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}">Reset Password</a></p>
-    
-    <p>If you did not request this change, please ignore this message.</p>
-    
-    <p>Best regards,<br>
-    OurFinanceTracker</p>
-</body>
+
+    {% url 'accounts:password_reset_confirm' uidb64=uid token=token as reset_path %}
+    {% with reset_url=protocol|add:"://"|add:domain|add:reset_path %}
+      <p>
+        <a href="{{ reset_url }}" style="display:inline-block;padding:10px 16px;border-radius:6px;text-decoration:none;background:#111;color:#fff;">
+          Reset password
+        </a>
+      </p>
+      <p>If the button doesn't work, copy and paste this link into your browser:<br>
+        <a href="{{ reset_url }}">{{ reset_url }}</a>
+      </p>
+    {% endwith %}
+
+    <p>This link will expire in {{ expiry_human|default:"1 hour" }} for security reasons.</p>
+    <p><strong>Important:</strong> Your password will only be changed after you complete the reset process and choose a new password.</p>
+    <p>If you did not request this change, please ignore this message. Your account remains secure.</p>
+    <p style="color:#555">OurFinanceTracker Team</p>
+  </body>
 </html>
