--- a/accounts/templates/accounts/emails/password_reset_email.html
+++ b/accounts/templates/accounts/emails/password_reset_email.html
@@ -26,7 +26,7 @@
         {% endwith %}
 
         <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #dee2e6;">
-            <p style="font-size: 14px; color: #666;">⏰ This link will expire in {{ expiry_human|default:"1 hour" }} for security reasons.</p>
+            <p style="font-size: 14px; color: #666;">⏰ This link will expire in {{ expiry_human|default:"10 minutes" }} for security reasons.</p>
             <p style="font-size: 14px;"><strong>Important:</strong> Your password will only be changed after you complete the reset process and choose a new password.</p>
             <p style="font-size: 14px; color: #666;">If you did not request this change, please ignore this message. Your account remains secure.</p>
         </div>
