--- a/accounts/templates/accounts/activation_invalid.html
+++ b/accounts/templates/accounts/activation_invalid.html
@@ -1,2 +1,11 @@
 
-<p>Sorry, this activation link is invalid or has expired. Please request a new one.</p>
+<!-- accounts/templates/accounts/activation_invalid.html -->
+<!doctype html>
+<html lang="en">
+  <head><meta charset="utf-8"><title>Invalid activation link</title></head>
+  <body>
+    <h1>Activation link is invalid or expired</h1>
+    <p>Please request a new activation email or contact support.</p>
+    <p><a href="/accounts/resend-activation/">Resend activation</a> (if implemented)</p>
+  </body>
+</html>
