--- a/accounts/templates/accounts/activation_success.html
+++ b/accounts/templates/accounts/activation_success.html
@@ -1,2 +1,11 @@
 
-<p>Your account has been activated. You are now signed in.</p>
+<!-- accounts/templates/accounts/activation_success.html -->
+<!doctype html>
+<html lang="en">
+  <head><meta charset="utf-8"><title>Account Activated</title></head>
+  <body>
+    <h1>Account activated ✅</h1>
+    <p>Your account is now active and you are signed in.</p>
+    <p><a href="/">Go to dashboard</a></p>
+  </body>
+</html>
