--- a/accounts/templates/accounts/emails/password_reset_email.html
+++ b/accounts/templates/accounts/emails/password_reset_email.html
@@ -11,7 +11,7 @@
        <p>Hello {{ user.first_name|default:user.username }},</p>
        <p>You (or someone else) requested a password reset for your OurFinanceTracker account.</p>
 
-       {% url 'accounts:password_reset_confirm' uidb64=uid token=token as reset_path %}
+       {% url 'password_reset_confirm' uidb64=uid token=token as reset_path %}
        {% with reset_url=protocol|add:"://"|add:domain|add:reset_path %}
            <div style="text-align: center; margin: 30px 0;">
                <a href="{{ reset_url }}" style="display: inline-block; padding: 12px 24px; border-radius: 6px; text-decoration: none; background: #007bff; color: #ffffff; font-weight: bold; font-size: 16px;">
