--- a/accounts/templates/accounts/emails/password_reset_email.html
+++ b/accounts/templates/accounts/emails/password_reset_email.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en-GB">
 <head>
@@ -15,14 +14,14 @@
     {% url 'accounts:password_reset_confirm' uidb64=uid token=token as reset_path %}
     {% with reset_url=protocol|add:"://"|add:domain|add:reset_path %}
       <p style="text-align:center;margin:24px 0;">
-        <a href="{{ reset_url }}" style="display:inline-block;padding:12px 18px;border-radius:6px;text-decoration:none;background:#111;color:#fff;font-weight:600;">
+        <a href="https://www.ourfinancetracker.com{{ reset_path }}" style="display:inline-block;padding:12px 18px;border-radius:6px;text-decoration:none;background:#111;color:#fff;font-weight:600;">
           Reset Your Password
         </a>
       </p>
 
       <p style="margin:0 0 10px 0;">If the button doesn't work, copy and paste this link into your browser:</p>
       <p style="word-break:break-all;margin:0 0 16px 0;">
-        <a href="{{ reset_url }}" style="color:#111;">{{ reset_url }}</a>
+        <a href="https://www.ourfinancetracker.com{{ reset_path }}" style="color:#111;">https://www.ourfinancetracker.com{{ reset_path }}</a>
       </p>
     {% endwith %}
 
