Replace clear cache with refresh action

--- a/core/templates/core/transaction_list_v2.html
+++ b/core/templates/core/transaction_list_v2.html
@@ -25,8 +25,8 @@
           <button class="btn btn-outline-success" id="import-btn">
             <i class="fas fa-upload"></i> Import Excel
           </button>
-          <button class="btn btn-outline-secondary" id="clear-cache-btn">
-            <i class="fas fa-broom"></i> Clear Cache
+          <button class="btn btn-outline-secondary" id="refresh-btn">
+            <i class="fas fa-sync"></i> Refresh
           </button>
           <a href="{% url 'transaction_create' %}" class="btn btn-success">
             <i class="fas fa-plus"></i> Add Transaction
