Prevent navbar links from wrapping

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -157,6 +157,10 @@
             color: #3AB49E !important;
         }
 
+        .navbar-nav .nav-link {
+            white-space: nowrap !important;
+        }
+
         .navbar-dark .navbar-brand,
         .navbar-dark .nav-link {
             color: #ffffff !important;
